syntax = "proto3";

// C# 네임스페이스 지정
option csharp_namespace = "GamePackets";

// 게임에서 사용할 패킷들을 정의합니다
// C_CHAT (클라이언트에서 서버로)
message C_Chat {
  string message = 1;
}

// S_CHAT (서버에서 클라이언트로)
message S_Chat {
  int64  playerid = 1;
  string mesage = 2;
  //int64 timestamp =3;
}

message PlayerInfoReq {
  int64 player_id = 1;
  string name = 2;
  repeated SkillInfo skills = 3;  // repeated = 배열/리스트

  // 중첩 메시지 (nested message)
  message SkillInfo {
    int32 id = 1;
    int32 level = 2;
    float duration = 3;
  }
}
